using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public class PlayerControlsManager
{
    // Controls
    public const string Horizontal = "Horizontal";
    public const string Vertical = "Vertical";

    // Combat Animation Names
    public const string FirstAttack = "Attack0";
    public const string SecondAttack = "Attack1";
    public const string ThirdAttack = "Attack2";

    // Movement Animation Names;
    public const string Idle = "Idle";
    public const string Run = "Run";

    // Animator Values
    public const string Movement = "Move";
    public const string Attack = "Attack";
    public const string Fire = "Fire Arc";
}
